--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ dependencies = []
 
 [dependency-groups]
 dev = [
-    "mypy>=1.0.0",
-    "pytest==8.3.2",
-    "approvaltests==14.0.0"
+    "mypy>=1.18.2",
+    "pytest>=8.4.2",
+    "approvaltests>=14.7.1"
 ]
 
 [tool.mypy]
